--- a/package.json
+++ b/package.json
@@ -2,6 +2,7 @@
   "name": "tw-thrall-map",
   "version": "0.1.0",
   "private": true,
+  "homepage": "tw-map",
   "dependencies": {
     "@testing-library/jest-dom": "^5.11.10",
     "@testing-library/react": "^11.2.5",
@@ -21,7 +22,7 @@
   },
   "scripts": {
     "start": "react-scripts start",
-    "build": "react-scripts build",
+    "build": "react-scripts docs",
     "test": "react-scripts test",
     "eject": "react-scripts eject"
   },
