--- a/package.json
+++ b/package.json
@@ -8,17 +8,19 @@
     "@testing-library/react": "^11.2.5",
     "@testing-library/user-event": "^12.8.3",
     "@types/jest": "^26.0.22",
+    "@types/leaflet": "^1.7.0",
     "@types/node": "^12.20.7",
     "@types/react": "^17.0.3",
+    "@types/react-autosuggest": "^10.1.4",
     "@types/react-dom": "^17.0.3",
-    "@types/leaflet": "^1.7.0",
+    "leaflet": "^1.7.1",
     "react": "^17.0.2",
+    "react-autosuggest": "^10.1.0",
     "react-dom": "^17.0.2",
+    "react-leaflet": "^3.1.0",
     "react-scripts": "4.0.3",
     "typescript": "^4.2.3",
-    "web-vitals": "^1.1.1",
-    "leaflet": "^1.7.1",
-    "react-leaflet": "^3.1.0"
+    "web-vitals": "^1.1.1"
   },
   "scripts": {
     "start": "react-scripts start",
