--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -23,10 +23,14 @@ jobs:
       - uses: actions/checkout@v2
 
       # Runs a single command using the runners shell
+      - name: Setup Node.js environment
+        uses: actions/setup-node@v2.1.5
+        with:
+          node-version: 12.x
       - name: Clear old deployment
         run: rm -rf docs
       - name: Build new app
-        run: npm install && npm run build
+        run: npm ci && npm run build
       - name: Create new docs
         run: mv build docs
       - name: Push new build
