--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -37,5 +37,6 @@ jobs:
         run: |
           git config --global user.name 'Nia292'
           git config --global user.email 'Nia292@users.noreply.github.com'
-          git commit docs m "Automated deployment by GH Actions"
+          git add docs
+          git commit -m "Automated deployment by GH Actions"
           git push
