--- a/package.json
+++ b/package.json
@@ -22,6 +22,9 @@
     "typescript": "^4.2.3",
     "web-vitals": "^1.1.1"
   },
+  "devDependencies": {
+    "xml2js": "^0.4.23"
+  },
   "scripts": {
     "start": "react-scripts start",
     "build": "react-scripts build",
