--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -34,9 +34,11 @@ jobs:
       - name: Create new docs
         run: mv build docs
       - name: Push new build
-        run: |
-          git config --global user.name 'Nia292'
-          git config --global user.email 'Nia292@users.noreply.github.com'
-          git add docs
-          git commit -m "Automated deployment by GH Actions"
-          git push
+        uses: actions-x/commit@v2
+        with:
+          # The committer's email address
+          email: Nia292@users.noreply.github.com
+          # The committer's name
+          name: Nia292
+          # The commit message
+          message: Automated deployment by GH Actions
